# extension-userpasswd-gnome

./: CMakeLists.txt  README.md
.gear/: gnome-shell-extension-userpasswd.spec  rules
userpasswd@altlinux.example.com/: extension.js  metadata.json
userpasswd@altlinux.example.com/locale/: CMakeLists.txt  userpasswd-extension.pot
userpasswd@altlinux.example.com/locale/ru/: userpasswd-extension.po
userpasswd@altlinux.org/: extension.js  metadata.json
